# node

./: .gitignore  AGENTS.md  README.md  README_CONFIG.md  bench_flow.py  execution_status.py  profile.stats  pyproject.toml  refactor.md  requirement.txt  tutorial.ipynb  tutorial.py
doc/: design.md  sweep.md
docs/: api.md  best_practices.md  cache_get_performance_analysis.md  commit_message_template.md  deep_dependency_scheduler_benchmark_analysis.md  design.md  node_library_context.md  resume-handoff.md  user-guide.md
examples/: config.yaml  run_sweep_readme.py
scripts/: bench_flow.py  bench_instantiate.py  complex_dim_stress.py  deep_dependency_scheduler_benchmark.py  demo_logger_features.py  demo_track_usage.py  dimension_cache_benchmark.py  massive_overhead_benchmark.py  test_repr.py  tutorial.py
tests/: config.yaml  conftest.py  test_bound_args.py  test_cache_contains.py  test_collision.py  test_config_cache_toggle.py  test_config_dependency.py  test_config_instantiate.py  test_config_presets.py  test_config_scalar_interpolation.py  test_config_yaml.py  test_dataframe_validation.py  test_define_without_runtime.py  test_dimension.py  test_dimensioned_result_cache.py  test_edgecases.py  test_error_handling.py  test_flow.py  test_gather.py  test_large_dataframe.py  test_new_dim_api.py  test_node.py  test_node_sweep_method.py  test_parallel_context.py  test_parallel_execution.py  test_process_fallback.py  test_reporter.py  test_runtime_reset.py  test_signatures.py  test_small_file_perf.py  test_sweep.py  test_tensor_node.py  test_track.py  test_track_process.py  (+1 more)
(+47 files in other folders)
