[project]
name = "node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cachetools>=6.0.0",
    "cloudpickle>=3.1.1",
    "coverage>=7.9.2",
    "filelock>=3.18.0",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "loky>=3.5.5",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "omegaconf>=2.3.0",
    "pydantic<2",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
]

[project.scripts]
node = "node:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
packages = ["node"]
explicit_package_bases = true
no_site_packages = true
ignore_missing_imports = true
